--- a/EmployeestWeb/Views/Home/Home.cshtml
+++ b/EmployeestWeb/Views/Home/Home.cshtml
@@ -54,7 +54,7 @@
     <p class="abbreviation"><span>C</span>ustomer <span>R</span>elationship <span>M</span>anagement</p>
     <h3>Feel the opportunity</h3>
     <nav class="navigationItem" aria-label="SignUp link">
-        <a asp-area="" asp-controller="Authorization" asp-action="Authorization link1">Try in now</a>
+        <a asp-area="" asp-controller="Authorization" asp-action="SignUp">Try in now</a>
     </nav>
 </div>
 <div class="section">
