--- a/EmployeestWeb/Views/Task/Index.cshtml
+++ b/EmployeestWeb/Views/Task/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@model IEnumerable<EmployeestWeb.DAL.Models.Task>
+﻿@{
+    Layout = "~/Views/Shared/_LeftSidebar.cshtml";
+}
+
+@model IEnumerable<EmployeestWeb.DAL.Models.Task>
 
 <h1>Tasks</h1>
 
