--- a/EmployeestWeb/Views/Task/Delete.cshtml
+++ b/EmployeestWeb/Views/Task/Delete.cshtml
@@ -1,49 +1,68 @@
+@{
+    ViewData["Title"] = "Delete task";
+    Layout = "~/Views/Shared/_LeftSidebar.cshtml";
+}
+
 @model EmployeestWeb.DAL.Models.Task
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Task</h4>
+<style>
+    .block {
+    margin-top: 60px;
+       }
+</style>
+<div class="block">
+<h2>Are you sure you want to delete this task?</h2>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TeamId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TeamId)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.StoryPoints)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.StoryPoints)
-        </dd>
-    </dl>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Id)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Id)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Description)
+            </dd>
+            <dt class="col-sm-2">
+                Asignee
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.User!.FullName)
+            </dd>
+            <dt class="col-sm-2">
+                Team
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Team!.Name)
+            </dd>
+            <dt class="col-sm-2">
+                Story Points
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.StoryPoints)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Status)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Status)
+            </dd>
+        </dl>
 
     <form asp-action="Delete" method="post">
         <input type="hidden" asp-for="Id" />
         <div class="form-group">
             <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a asp-action="Index">Back to List</a>
+            <a asp-action="Details" asp-route-id="@Model.Id">Back to details</a>
         </div>
     </form>
 </div>
