--- a/EmployeestWeb/Views/Task/Details.cshtml
+++ b/EmployeestWeb/Views/Task/Details.cshtml
@@ -1,13 +1,17 @@
 @model EmployeestWeb.DAL.Models.Task
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Task details";
+    Layout = "~/Views/Shared/_LeftSidebar.cshtml";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>Task</h4>
+<style>
+    .block {
+    margin-top: 60px;
+       }
+</style>
+<div class="block">
+    <h2>Task</h2>
     <hr/>
     <dl class="row">
         <dt class="col-sm-2">
@@ -29,19 +33,19 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User!.FullName)
+            Asignee
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.User!.FullName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team!.Name)
+            Team
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Team!.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.StoryPoints)
+            Story Points
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.StoryPoints)
@@ -57,5 +61,5 @@
 
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
 </div>
