--- a/EmployeestWeb/Views/Owner/Dashboard.cshtml
+++ b/EmployeestWeb/Views/Owner/Dashboard.cshtml
@@ -1,12 +1,15 @@
-﻿@{
+﻿@using EmployeestWeb.Models
+@model EmployeestWeb.Models.OwnerViewModel
+@{
     ViewData["Title"] = "Dashboard";
+    ViewData["UserName"] = Model.FullName;
 }
 
 <div class="dashboard">
     <div class="main-block">
         <header class="header">
             <h3>Home</h3>
-            <h1>Welcome, User Name</h1>
+            <h1>Welcome, @Model.FullName</h1>
         </header>
         <div class="statistics-wrapper"></div>
     </div>
@@ -14,99 +17,60 @@
         <div class="project-block">
             <div class="heading-wrapper">
                 <h2 class="heading">My projects</h2>
-                <div class="counter">3</div>
+                <div class="counter">
+                    @{
+                        int projectsSize = 0;
+                        int teamsSize = 0;
+                        if (Model.Projects != null)
+                        {
+                            projectsSize = Model.Projects.Count();
+                        }
+                        <div class="counter project-counter">@projectsSize</div>
+                    }
+                </div>
             </div>
             <div class="project-list">
-                <div class="project">
-                    <div class="project-info">
-                        <img 
-                            class="project-avatar" 
-                            src="~/assets/project-icon.svg" 
-                            alt="Project placeholder"
-                        >
-                        <div class="project-wrapper">
-                            <div class="project-name-wrapper">
-                                <div class="project-name">Some project1</div>
-                                <div class="teams">2 teams</div>
+                @{
+                    if (Model.Projects != null)
+                    {
+                        foreach (var project in Model.Projects)
+                        {
+                            <div class="project">
+                                <div class="project-info">
+                                    <img class="project-avatar"
+                                            src="~/assets/project-icon.svg"
+                                            alt="Project placeholder">
+                                    <div class="project-wrapper">
+                                        <div class="project-name-wrapper">
+                                            <div class="project-name">@project.Name</div>
+                                            @{
+                                                teamsSize = 0;
+                                                if (project.Teams != null)
+                                                {
+                                                    teamsSize = project.Teams.Count();
+                                                }
+                                                <div class="teams">@teamsSize teams</div>
+                                            }
+                                        </div>
+                                        <a class="view-more">View more information</a>
+                                    </div>
+                                </div>
+                                <div class="actions">
+                                    <button class="team-button">
+                                        <img class="team-icon" 
+                                                src="~/assets/team-icon.svg" 
+                                                alt="Team icon">
+                                    </button>
+                                    <button class="options-button">
+                                        <span class="dot"></span>
+                                        <span class="dot"></span>
+                                        <span class="dot"></span>
+                                    </button>
+                                </div>
                             </div>
-                            <a class="view-more">View more information</a>
-                        </div>
-                    </div>
-                    <div class="actions">
-                        <button class="team-button">
-                            <img 
-                                class="team-icon" 
-                                src="~/assets/team-icon.svg" 
-                                alt="Team icon"
-                            >
-                        </button>
-                        <button class="options-button">
-                            <span class="dot"></span>
-                            <span class="dot"></span>
-                            <span class="dot"></span>
-                        </button>
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="project-info">
-                        <img 
-                            class="project-avatar" 
-                            src="~/assets/project-icon.svg" 
-                            alt="Project placeholder"
-                        >
-                        <div class="project-wrapper">
-                            <div class="project-name-wrapper">
-                                <div class="project-name">Some project1</div>
-                                <div class="teams">2 teams</div>
-                            </div>
-                            <a class="view-more">View more information</a>
-                        </div>
-                    </div>
-                    <div class="actions">
-                        <button class="team-button">
-                            <img 
-                                class="team-icon" 
-                                src="~/assets/team-icon.svg" 
-                                alt="Team icon"
-                            >
-                        </button>
-                        <button class="options-button">
-                            <span class="dot"></span>
-                            <span class="dot"></span>
-                            <span class="dot"></span>
-                        </button>
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="project-info">
-                        <img 
-                            class="project-avatar" 
-                            src="~/assets/project-icon.svg" 
-                            alt="Project placeholder"
-                        >
-                        <div class="project-wrapper">
-                            <div class="project-name-wrapper">
-                                <div class="project-name">Some project1</div>
-                                <div class="teams">2 teams</div>
-                            </div>
-                            <a class="view-more">View more information</a>
-                        </div>
-                    </div>
-                    <div class="actions">
-                        <button class="team-button">
-                            <img 
-                                class="team-icon" 
-                                src="~/assets/team-icon.svg" 
-                                alt="Team icon"
-                            >
-                        </button>
-                        <button class="options-button">
-                            <span class="dot"></span>
-                            <span class="dot"></span>
-                            <span class="dot"></span>
-                        </button>
-                    </div>
-                </div>
+                        }
+                    }
+                }
             </div>
         </div>
     </aside>
