--- a/EmployeestWeb/Views/Team/AddEmployee.cshtml
+++ b/EmployeestWeb/Views/Team/AddEmployee.cshtml
@@ -1,4 +1,4 @@
-﻿@model AddEmployeeTeamModel
+﻿@model AddEmployeeTeamViewModel
 
 <link href="@Url.Content("~/wwwroot/css/site.css")" rel="stylesheet" type="text/css" />
 <div class="add-employee-form">
@@ -10,7 +10,7 @@
         <input asp-for="Email" class="add-employee-input" />
         <span asp-validation-for="Email" class="add-employee-validation-error"></span>
     </div>
-
+        <input asp-for="TeamId" class="add-employee-input" hidden="hidden" value="@Model?.TeamId"/>
     <button type="submit" class="add-employee-btn">Add Employee</button>
 </form>
     </div>
