--- a/EmployeestWeb/Views/Team/AddEmployee.cshtml
+++ b/EmployeestWeb/Views/Team/AddEmployee.cshtml
@@ -2,9 +2,9 @@
 
 <link href="@Url.Content("~/wwwroot/css/site.css")" rel="stylesheet" type="text/css" />
 <div class="add-employee-form">
-<form asp-action="AddEmployee" asp-controller="Team" method="post">
-    @*<div asp-validation-summary="All" class="text-danger"></div>*@
+    @Html.ValidationSummary()
 
+<form asp-action="AddEmployee" asp-controller="Team" method="post">
     <div class="form-group">
         <label asp-for="Email" class="add-employee-label"></label>
         <input asp-for="Email" class="add-employee-input" />
