#38: did code cleanup

--- a/EmployeestWeb/Views/Worker/AddEmployee.cshtml
+++ b/EmployeestWeb/Views/Worker/AddEmployee.cshtml
@@ -1,4 +1,4 @@
-﻿@model AddEmployeeModel
+﻿@model AddEmployeeViewModel
 
 <form asp-action="AddEmployee" asp-controller="Worker" method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
