--- a/EmployeestWeb/Views/Worker/AddEmployee.cshtml
+++ b/EmployeestWeb/Views/Worker/AddEmployee.cshtml
@@ -1,40 +1,43 @@
 ﻿@model AddEmployeeViewModel
 
-<form asp-action="AddEmployee" asp-controller="Worker" method="post">
-    <div asp-validation-summary="All" class="text-danger"></div>
+<link href="@Url.Content("~/wwwroot/css/site.css")" rel="stylesheet" type="text/css" />
+<div class="add-employee-form">
+    @Html.ValidationSummary()
+    <form asp-action="AddEmployee" asp-controller="Worker" method="post">
 
-    <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
+        <div class="form-group">
+            <label asp-for="Email" class="add-employee-label"></label>
+            <input asp-for="Email" class="add-employee-input" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
 
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
+        <div class="form-group">
+            <label asp-for="Password" class="add-employee-label"></label>
+            <input asp-for="Password" class="add-employee-input" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
 
-    <div class="form-group">
-        <label asp-for="FullName"></label>
-        <input asp-for="FullName" class="form-control" />
-        <span asp-validation-for="FullName" class="text-danger"></span>
-    </div>
+        <div class="form-group">
+            <label asp-for="FullName" class="add-employee-label"></label>
+            <input asp-for="FullName" class="add-employee-input" />
+            <span asp-validation-for="FullName" class="text-danger"></span>
+        </div>
 
-    <div class="form-group">
-        <label asp-for="PhoneNumber"></label>
-        <input asp-for="PhoneNumber" class="form-control" />
-        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-    </div>
+        <div class="form-group">
+            <label asp-for="PhoneNumber" class="add-employee-label"></label>
+            <input asp-for="PhoneNumber" class="add-employee-input" />
+            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+        </div>
 
-    <div class="form-group">
-        <label asp-for="IsBussinessOwner"></label>
-        <select asp-for="IsBussinessOwner" class="form-control">
-            <option value="true">Yes</option>
-            <option value="false">No</option>
-        </select>
-        <span asp-validation-for="IsBussinessOwner" class="text-danger"></span>
-    </div>
+        <div class="form-group">
+            <label asp-for="IsBussinessOwner" class="add-employee-label"></label>
+            <select asp-for="IsBussinessOwner" class="form-control">
+                <option value="true">Yes</option>
+                <option value="false">No</option>
+            </select>
+            <span asp-validation-for="IsBussinessOwner" class="text-danger"></span>
+        </div>
 
-    <button type="submit" class="btn btn-primary">Add Employee</button>
-</form>
+        <button type="submit" class="add-employee-btn">Add Employee</button>
+    </form>
+</div>
