Tech/markup fixed

--- a/EmployeestWeb/Views/Employee/Dashboard.cshtml
+++ b/EmployeestWeb/Views/Employee/Dashboard.cshtml
@@ -135,8 +135,9 @@
                         </div>
                     </div>
                 }
+
                 <div class="create-task">
-                    <a asp-controller="Task" asp-action="Create">
+                    <a asp-controller="Task" asp-action="Create" class="button-link">
                         <button class="create-task-button">Create new task...</button>
                     </a>
                 </div>
