--- a/EmployeestWeb/Views/Task/Create.cshtml
+++ b/EmployeestWeb/Views/Task/Create.cshtml
@@ -6,8 +6,17 @@
 @model EmployeestWeb.DAL.Models.Task
 
 <style>
+    .h2 {
+        margin-bottom: 32px;
+    }
+
     .block {
     margin-top: 60px;
+    padding-left: 120px;
+       }
+
+       .form-group {
+           margin-bottom: 16px;
        }
 </style>
 <form asp-action="Create" class="block">
