--- a/EmployeestWeb/Views/Employee/Dashboard.cshtml.css
+++ b/EmployeestWeb/Views/Employee/Dashboard.cshtml.css
@@ -4,7 +4,6 @@
 
 .block {
     margin-top: 60px;
-    padding-left: 60px;
     display: flex;
     flex-direction: column;
     gap: 80px;
@@ -60,6 +59,7 @@ h3 {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    margin-bottom: 32px;
 }
 
 .project-avatar {
@@ -101,18 +101,57 @@ h3 {
 }
 
 .aside-block {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    width: 470px;
     background-color: #D9D9D9;
     padding: 0 52px;
 }
 
-.first-row {
-    display: flex;
-    gap: 200px;
+@media (min-width: 850px) {
+    .block {
+        padding-left: 60px;
+    }
+}
+
+@media (min-width: 992pxpx) {
+    .block {
+        padding-left: 120px;
+    }
+}
+
+@media (min-width: 1080pxpx) {
+    .block {
+        padding-left: 200px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .block {
+        padding-left: 60px;
+    }
+
+    .aside-block {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: 30%;
+        background-color: #D9D9D9;
+        padding: 0 52px;
+    }
+
+    .first-row {
+        display: flex;
+        gap: 50px;
+        flex-direction: row;
+    }
+
+    .statistics {
+        width: 330px;
+    }
+
+    .tasks-block {
+        margin-top: 190px;
+        padding: 0;
+    }
 }
 
 .member-body {
@@ -188,7 +227,6 @@ h3 {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    width: 330px;
 }
 
 .tasks-heading-wrapper {
@@ -231,6 +269,15 @@ h3 {
 .task-name {
     font-size: 18px;
 }
+
+.button-link {
+    text-decoration: none;
+}
+
+a {
+    cursor: pointer;
+}
+
 
 .create-task-button {
     display: flex;
@@ -289,10 +336,11 @@ h3 {
 }
 
 .tasks-block {
-    margin-top: 190px;
     display: flex;
     flex-direction: column;
     gap: 40px;
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 
 .task-list {
