--- a/EmployeestWeb/Views/Owner/Dashboard.cshtml.css
+++ b/EmployeestWeb/Views/Owner/Dashboard.cshtml.css
@@ -1,9 +1,4 @@
 ﻿.aside-block {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    width: 470px;
     background-color: #D9D9D9;
     display: flex;
     justify-content: center;
@@ -42,13 +37,7 @@ h3 {
     align-items: center;
     justify-content: center;
     gap: 16px;
-}
-
-.project-block {
-    margin-top: 215px;
-    display: flex;
-    flex-direction: column;
-    gap: 62px;
+    margin-bottom: 32px;
 }
 
 .project-name-wrapper {
@@ -90,7 +79,7 @@ h3 {
     display: flex;
     background-color: transparent;
     border: none;
-    height: 25px;
+    height: 100%;
 }
 
 .actions {
@@ -99,11 +88,22 @@ h3 {
     align-items: center;
 }
 
+
+.project-block {
+    margin: 0;
+    padding: 32px;
+    width: 100%;
+}
+
+.project-list {
+    width: 100%;
+}
+
 .project {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    width: 415px;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .teams {
@@ -127,13 +127,70 @@ h3 {
 }
 
 .statistics-wrapper {
-    width: 900px;
+    width: 100%;
     height: 500px;
     background-color: #E9E9E9;
+    margin-bottom: 60px;
 }
 
 .main-block {
     display: flex;
     flex-direction: column;
-    gap: 140px;
+    gap: 60px;
+    margin-top: 60px;
+}
+
+@media (min-width: 850px) {
+    .dashboard {
+        margin-left: 100px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .project-block {
+        margin-top: 215px;
+        display: flex;
+        flex-direction: column;
+        gap: 62px;
+    }
+
+    .project {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }
+
+    .dashboard {
+        margin-left: 120px;
+    }
+
+    .main-block {
+        display: flex;
+        flex-direction: column;
+        gap: 140px;
+        margin-top: 60px;
+        margin-bottom: 60px;
+    }
+
+    .project-list {
+        width: 100%;
+    }
+
+    .statistics-wrapper {
+        width: 500px;
+        height: 500px;
+        background-color: #E9E9E9;
+    }
+
+    .aside-block {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: 470px;
+        background-color: #D9D9D9;
+        display: flex;
+        justify-content: center;
+    }
 }
