--- a/EmployeestWeb/Views/Owner/Workers.cshtml.css
+++ b/EmployeestWeb/Views/Owner/Workers.cshtml.css
@@ -1,9 +1,10 @@
 .employees {
-    padding-left: 60px;
+    padding-left: 120px;
     font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
     gap: 70px;
+    margin-top: 160px;
 }
 
 .header {
@@ -143,4 +144,35 @@ th {
     height: 3px;
     background-color: #6D6D6D;
     border-radius: 100%;
+}
+
+.content {
+    overflow-x: auto;
+}
+
+
+@media (max-width: 992px) {
+    .header {
+        flex-direction: column;
+    }
+
+    .search {
+        width: 100%;
+    }
+}
+
+
+@media (max-width: 850px) {
+    .employees {
+        padding: 0;
+        margin-top: 60px;
+    }
+
+    .header {
+        flex-direction: column;
+    }
+
+    .search {
+        width: 100%;
+    }
 }
