#41: added unit tests and fixed AddTask functionality

--- a/EmployeestWeb/Views/Task/Create.cshtml
+++ b/EmployeestWeb/Views/Task/Create.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_LeftSidebar.cshtml";
 }
 
-@model EmployeestWeb.DAL.Models.Task
+@model AddTaskViewModel
 
 <style>
     .block {
